--- a/style/architects.css
+++ b/style/architects.css
@@ -7,3 +7,45 @@
   font-weight:400;
   font-style: normal;
 }
+/* shared styie */
+
+
+/* header style */
+.header{
+    background-color: rgba(255, 144, 14, 0.1);
+    
+}
+/* nav style */
+.max-width{
+    max-width: 1400px;
+   margin: 0 auto;
+}
+.displsy-flex{
+    display: flex;
+}
+.navber{
+   justify-content: space-between;
+   align-items: center;
+   
+}
+.brand{
+    color: rgba(19, 19, 19, 1);
+    font-weight: bold;
+    font-size: 45px;
+}
+.nav-links{
+    
+}
+.nav-link{
+    text-decoration: none;
+    font-weight: 500;
+    font-size:18px;
+    color: rgba(66, 66, 66, 1);
+}
+
+.nav-items{
+    list-style: none;
+    margin-right: 15px;
+   
+
+}
