--- a/style/architects.css
+++ b/style/architects.css
@@ -1,28 +1,43 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
-.work-sans-worksansfont {
+.work-sans-fonts{
   font-family: "Work Sans", serif;
   font-optical-sizing: auto;
   font-weight:400;
   font-style: normal;
 }
-/* shared styie */
 
+/* shared styie */
+.displsy-flex{
+    display: flex;
+}
+.dakr-3{
+    color:rgba(114, 114, 114, 1) ;
+    font-weight: 400;
+    font-size: 16px;
+}
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+main > section{
+    margin-top: 130px;
+}
 
 /* header style */
 .header{
     background-color: rgba(255, 144, 14, 0.1);
     
 }
+
 /* nav style */
-.max-width{
+.max-width, .benner{
     max-width: 1400px;
    margin: 0 auto;
 }
-.displsy-flex{
-    display: flex;
-}
+
+
 .navber{
    justify-content: space-between;
    align-items: center;
@@ -47,5 +62,77 @@
     list-style: none;
     margin-right: 15px;
    
+
+}
+/* benner style */
+
+.benner-contant{
+    max-width: 861px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 50px;
+}
+.benner-title{
+    color: rgba(19, 19, 19, 1);
+    font-weight: bold;
+    font-size: 4rem;
+}
+.primary-btn{
+    color:#FFFFFF ;
+    background-color:#FF900E ;
+    padding: 20px 25px;
+    font-weight: 600;
+    font-size:1.25rem ;
+    border: none;
+    border-radius: 8px;
+}
+.benner-image{
+    width: 100%;
+}
+
+/* responsive media query */
+
+@media screen and (max-width: 576px) {
+    .navber,
+    .nav-links,
+    .teams{
+        flex-direction: column;
+    }
+    .nav-items{
+        margin: 20px;
+    }
+    .team-img-container{
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+/* main style */
+.our-features{
+    margin-left: 130px;
+    max-width: 530px;
+}
+
+.teams{
+    align-items: center;
+
+}
+.team-img-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+}
+#part-1{
+    color:rgba(114, 114, 114, 1);
+    font-weight:500 ;
+    font-size: 2.81rem;
+}
+#part-2{
+    color:rgba(19, 19, 19, 1);
+    font-weight: bold;
+    font-size:2.81rem;
+}
+#part-3{
+    color:#FF900E ;
+    font-weight: bold;
+    font-size: 2.81rem;
 
 }
