--- a/style/architects.css
+++ b/style/architects.css
@@ -102,8 +102,10 @@ main > section{
     .nav-items{
         margin: 20px;
     }
-    .img-container{
-        grid-template-columns: repeat(1, 1fr);
+    .img-container,
+     .fact-description,
+      .sponspors-companies{
+        grid-template-columns: 1fr;
     }
     
 }
@@ -113,7 +115,7 @@ main > section{
     align-items: center;
 }
 .img-container{
-    display: grid;
+    display:grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 24px;
 }
@@ -135,4 +137,47 @@ main > section{
     color:#FF900E ;
     font-weight: bold;
     font-size: 2.81rem;
+}
+/* some fact style */
+.facts-container{
+    display:grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+.fact-card{
+    border: 1px solid #FF900E;
+    width: 240px;
+    height: 240px;
+    border-radius:8px ;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    
+}
+.fact-number{
+    font-size: 2.8rem;
+    font-weight: 600;
+    margin-top:5px;
+    margin-bottom: 10px;
+}
+.fact-name{
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-top: 10px;
+    color: rgba(114, 114, 114, 1);
+}
+.fact-description{
+    max-width: 540px;
+}
+/* sponspors style */
+.sponspors-info{
+    max-width: 540px;
+    margin: 50px auto;
+    text-align: center;
+}
+.sponspors-companies{
+    display:grid;
+    grid-template-columns: repeat(5, 1fr);
+}
+.sponspors-companies img{
+    filter: grayscale(100%);
 }
