--- a/style/architects.css
+++ b/style/architects.css
@@ -181,3 +181,25 @@ main > section{
 .sponspors-companies img{
     filter: grayscale(100%);
 }
+
+/* Features you will enjoy style  */
+.features{
+    gap: 140px;
+}
+#feature-title{
+    border-left:5px solid #FF900E;
+    padding-left: 21px;
+}
+.feature-card{
+    padding: 30px;
+    box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.25);
+    margin-bottom: 20px;
+    border-radius: 8px;
+}
+.feature-card .feature-title{
+    font-weight:600;
+    font-size: 1.25rem;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    
+}
